syntax = "proto2";

package np;

option java_package = "com.crush.protobuf.pojo";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq {
  required int32 subReqId = 1;
  required string userName = 2;
  required string productName = 3;
  repeated string address = 4;
}